# green-computing-test

./: .gitignore
projects/cpp-zmq/: meson.build
projects/js-bun-elysia/: Dockerfile  Dockerifile  bun.lockb  index.ts  package.json
projects/js-node-express/: Dockerfile  index.js
projects/php-laravel/: main.php
projects/python-fastapi/: Dockerfile  main.py  requirements.txt
projects/python-flask/: Dockerfile  app.py
projects/rust-poem/: Cargo.toml  Dockerfile
projects/rust-poem/src/: main.rs
projects/rust-rocket/: Cargo.toml  Dockerfile
projects/rust-rocket/src/: main.rs
